--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]><html class="ie" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
+<!--[if IE 8 ]><html class="ie" xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -17,14 +17,14 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
 	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
 	<!-- jQuery -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
 	<!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="stylesheets/loader.css">
@@ -538,23 +538,23 @@
 				-->
 
 				<!-- YouTube
-				<li><a href="http://youtube.com" target="_blank"><img src="images/icons/youtube-large.png" alt="youtube" width="36" height="36"></a></li>
+				<li><a href="https://youtube.com" target="_blank"><img src="images/icons/youtube-large.png" alt="youtube" width="36" height="36"></a></li>
 				-->
 
 				<!-- Vimeo
-				<li><a href="http://vimeo.com" target="_blank"><img src="images/icons/vimeo-large.png" alt="vimeo" width="36" height="36"></a></li>
+				<li><a href="https://vimeo.com" target="_blank"><img src="images/icons/vimeo-large.png" alt="vimeo" width="36" height="36"></a></li>
 				-->
 
 				<!-- Flickr
-				<li><a href="http://flickr.com" target="_blank"><img src="images/icons/flickr-large.png" alt="flickr" width="36" height="36"></a></li>
+				<li><a href="https://flickr.com" target="_blank"><img src="images/icons/flickr-large.png" alt="flickr" width="36" height="36"></a></li>
 				-->
 
 				<!-- RSS
-				<li><a href="http://rss.com" target="_blank"><img src="images/icons/rss-large.png" alt="rss" width="36" height="36"></a></li>
+				<li><a href="https://rss.com" target="_blank"><img src="images/icons/rss-large.png" alt="rss" width="36" height="36"></a></li>
 				-->
 
 				<!-- Google Plus
-				<li><a href="http://google.com" target="_blank"><img src="images/icons/google-large.png" alt="google" width="36" height="36"></a></li>
+				<li><a href="https://google.com" target="_blank"><img src="images/icons/google-large.png" alt="google" width="36" height="36"></a></li>
 				-->
 			</ul>
 
@@ -571,19 +571,19 @@
 
 		//Replace with your own image's paths
 	   var images = {
-	        'parallax1':    'http://madhulikasaxena.com/images/parallax-bg1.gif',
-	        'parallax2':    'http://www.aetherthemes.com/demo/visia/images/services-red.jpg',
-	        'parallax3':    'http://www.aetherthemes.com/demo/visia/images/clients.jpg',
-	        'About Us': 	'http://www.aetherthemes.com/demo/visia/images/about.jpg',
-	        'Team':     	'http://www.aetherthemes.com/demo/visia/images/team.jpg',
-	        'Thumb1':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project1.jpg',
-	        'Thumb2':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project2.jpg',
-	        'Thumb3':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project3.jpg',
-	        'Thumb4':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project4.jpg',
-	        'Thumb5':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project5.jpg',
-	        'Thumb6':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project6.jpg',
-	        'Thumb7':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project7.jpg',
-	        'Thumb8':   	'http://www.aetherthemes.com/demo/visia/images/thumbnails/project8.jpg'
+	        'parallax1':    'https://madhulikasaxena.com/images/parallax-bg1.gif',
+	        'parallax2':    'https://www.aetherthemes.com/demo/visia/images/services-red.jpg',
+	        'parallax3':    'https://www.aetherthemes.com/demo/visia/images/clients.jpg',
+	        'About Us': 	'https://www.aetherthemes.com/demo/visia/images/about.jpg',
+	        'Team':     	'https://www.aetherthemes.com/demo/visia/images/team.jpg',
+	        'Thumb1':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project1.jpg',
+	        'Thumb2':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project2.jpg',
+	        'Thumb3':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project3.jpg',
+	        'Thumb4':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project4.jpg',
+	        'Thumb5':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project5.jpg',
+	        'Thumb6':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project6.jpg',
+	        'Thumb7':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project7.jpg',
+	        'Thumb8':   	'https://www.aetherthemes.com/demo/visia/images/thumbnails/project8.jpg'
 	    };
 
 	    // config
