--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<li><a href="#section2">About</a></li>
 				<li><a href="#section3">Design Focus</a></li>
 				<li><a href="#section4">Work</a></li>
-				<li><a href="https://www.etsy.com/shop/Paper28" target="_blank">Paper28</a></li>
+				<li><a href="https://www.paper28.com/" target="_blank">Paper28</a></li>
 				<li><a href="#footer">Contact</a></li>
 			</ul>
 		</div>
@@ -113,7 +113,7 @@
 			<h2>Madhulika Saxena</h2>
 			<span class="border"></span>
 			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work.
-			Currently a UX & UI Designer for Internet of Things products at SAP. Based in Waterloo, Canada.</p>
+			Currently leading UX & UI Design for Internet of Things products at SAP. Based in Waterloo, Canada.</p>
 		</div>
 
 		<!-- Image -->
