Fixed name in Tesla project

--- a/projects/tesla-dashboard.html
+++ b/projects/tesla-dashboard.html
@@ -111,8 +111,8 @@
 		</div>
 
 		<div class="project-title grid-full">
-			<h4>Fusion</h4>
-			<h6><em>branding / packaging</em></h6>
+			<h4>Tesla Dashboard</h4>
+			<h6><em>UI design</em></h6>
 		</div>
 
 		<div class="project-info clearfix">
