Taking out images from stratford
Wrong size images

--- a/projects/stratford.html
+++ b/projects/stratford.html
@@ -96,22 +96,7 @@
 			<!-- Slider -->
 			<ul class="slider clearfix">
 				<li>
-					<img src="http://madhulikasaxena.com/projects/stratford/1@2x.jpg" alt="N/A">
-				</li>
-				<li>
-					<img src="http://madhulikasaxena.com/projects/stratford/2@2x.jpg" alt="N/A">
-				</li>
-				<li>
-					<img src="http://madhulikasaxena.com/projects/stratford/3@2x.jpg" alt="N/A">
-				</li>
-				<li>
-					<img src="http://madhulikasaxena.com/projects/stratford/4@2x.jpg" alt="N/A">
-				</li>
-				<li>
-					<img src="http://madhulikasaxena.com/projects/stratford/5@2x.jpg" alt="N/A">
-				</li>
-				<li>
-					<img src="http://madhulikasaxena.com/projects/stratford/6@2x.jpg" alt="N/A">
+					<img src="http://madhulikasaxena.com/images/content-curated@2x.jpg" alt="">
 				</li>
 			</ul>
 
