changed to lifescanner

--- a/index.html
+++ b/index.html
@@ -398,11 +398,11 @@
 				</a>
 			</li>
 			<li class="project mix category_ux category_branding mix_all">
-				<a href="#!projects/barcodeoflife.html">
+				<a href="#!projects/lifescanner.html">
 					<img src="images/thumbnails/thumb-bol.jpg" alt="thumbnail">
 					<div class="projectinfo">
 						<div class="meta">
-							<h4>Barcode of Life</h4>
+							<h4>LifeScanner</h4>
 							<h6><em>ux/ui/mobile</em></h6>
 						</div>
 					</div>
