--- a/projects/lifescanner.html
+++ b/projects/lifescanner.html
@@ -111,14 +111,17 @@
 		</div>
 
 		<div class="project-title grid-full">
-			<h4>Barcode of Life</h4>
+			<h4>LifeScanner</h4>
 			<h6><em>design thinking / UX</em></h6>
 		</div>
 
 		<div class="project-info clearfix">
 			<div class="grid-full">
 				<h6></h6>
-				<p> Coming Soon</p>
+				<p>
+					<br> Coming Soon </br>
+					<br> <a href="http://lifescanner.net" target="_blank">Learn more on sap.com →</a></br>
+				</p>
 			</div>
 		</div>
 
