--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 					</div>
 				</a>
 			</li>
-			<li class="project mix category_branding category_ux mix_all">
+			<li class="project mix category_branding category_print category_ux mix_all">
 				<a href="#!projects/florence.html">
 					<img src="images/thumbnails/thumb-florence.jpg" alt="thumbnail">
 					<div class="projectinfo">
@@ -375,7 +375,7 @@
 					</div>
 				</a>
 			</li>
-			<li class="project mix category_branding mix_all">
+			<li class="project mix category_branding category_print mix_all">
 				<a href="#!projects/childoftherain.html">
 					<img src="images/thumbnails/thumb-child.jpg" alt="thumbnail">
 					<div class="projectinfo">
@@ -403,12 +403,12 @@
 					<div class="projectinfo">
 						<div class="meta">
 							<h4>LifeScanner</h4>
-							<h6><em>ux/ui/mobile</em></h6>
+							<h6><em>design thinking/ux/mobile</em></h6>
 						</div>
 					</div>
 				</a>
 			</li>
-			<li class="project mix category_branding category_ux mix_all">
+			<li class="project mix category_branding category_print category_ux mix_all">
 				<a href="#!projects/flamingo.html">
 					<img src="images/thumbnails/thumb-flamingo.jpg" alt="thumbnail">
 					<div class="projectinfo">
