Revert "Updated tooltip for print"
This reverts commit 30eaf4f11b9d6f4ef83363aabb406157bbc7548b.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-z<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if IE 8 ]><html class="ie" xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
 <head>
@@ -207,12 +207,11 @@ z<!DOCTYPE html>
 				<!-- Feature List -->
 					<div class="tooltip">
 						<ul class="feature-list">
-							<li><span class="list-dot"></span>Branding Materials</li>
-							<li><span class="list-dot"></span>Marketing Material Design</li>
 							<li><span class="list-dot"></span>Poster Design</li>
 							<li><span class="list-dot"></span>Brochure/Flyer Design</li>
 							<li><span class="list-dot"></span>Magazine Design</li>
 							<li><span class="list-dot"></span>CD/Vinyl Design</li>
+							<li><span class="list-dot"></span>Marketing Material Design</li>
 						</ul>
 					</div>
 					<span class="arrow-down"></span>
