--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							<li><span class="list-dot"></span>Brochure/Flyer Design</li>
 							<li><span class="list-dot"></span>Magazine Design</li>
 							<li><span class="list-dot"></span>CD/Vinyl Design</li>
-							<li><span class="list-dot"></span>Marketing Material Design</li>
+							<li><span class="list-dot"></span>Marketing Materials</li>
 						</ul>
 					</div>
 					<span class="arrow-down"></span>
