Updated job title

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<h2>Madhulika Saxena</h2>
 			<span class="border"></span>
 			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work.
-			Currently leading UX & UI Design for Internet of Things products at SAP. Based in Waterloo, Canada.</p>
+			Currently a Product Designer at Igloo. Based in Waterloo, Canada.</p>
 		</div>
 
 		<!-- Image -->
