Updated paper28 to lovingcore link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<li><a href="#section2">About</a></li>
 				<li><a href="#section3">Design Focus</a></li>
 				<li><a href="#section4">Work</a></li>
-				<li><a href="https://www.paper28.com/" target="_blank">Paper28</a></li>
+				<li><a href="https://www.thelovingcore.com" target="_blank">The Loving Core Studio</a></li>
 				<li><a href="#footer">Contact</a></li>
 			</ul>
 		</div>
