removed Visia and updated email

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-	<title>Madhulika Saxena | UX/UI Designer</title>
-	<meta name="description" content="Visia. Responsive One Page Portfolio.">
-	<meta name="keywords" content="visia, responsive, one page, portfolio, parallax, template, html5">
-	<meta name="author" content="Aether Themes">
+	<title>Madhulika Saxena | Designer</title>
+	<meta name="description" content="Multidisciplinary Designer">
+	<meta name="keywords" content="design,designers,UX,UI,graphic design,mobile,web">
+	<meta name="author" content="Madhulika Saxena">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -60,7 +60,7 @@
 
 		<!-- Logo -->
 		<div class="logo">
-			<a id="top" href="#"><img src="images/logo@2x.png" width="91" height="30" alt="Visia"></a>
+			<a id="top" href="#"><img src="images/logo@2x.png" width="91" height="30" alt="Madhulika_logo"></a>
 		</div>
 
 		<!-- Mobile Nav Button -->
@@ -476,7 +476,7 @@
 					<a id="contact-open" href="#">
 						<img src="images/icons/mail.png" alt="mail" width="20" height="20">
 						<br>
-						madhulika28@hotmail.com
+						madhulikadesigns@gmail.com
 					</a>
 				</li>
 				<li class="grid-2">
