--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div class="title grid-full">
 			<h2>Madhulika Saxena</h2>
 			<span class="border"></span>
-			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently a Product Designer at Igloo Software. Based in Waterloo, Canada.</p>
+			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently a User Experience Designer at Igloo Software. Based in Waterloo, Canada.</p>
 		</div>
 
 		<!-- Image -->
