--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--[if IE 8 ]><html class="ie" xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
 <head>
+	<meta name="p:domain_verify" content="8b3c7d84c75378f185dbeb5f39ea8320"/>
 	<meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 	<title>Madhulika Saxena | Designer</title>
