--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 					<a id="contact-open" href="#">
 						<img src="images/icons/mail.png" alt="mail" width="20" height="20">
 						<br>
-						madhulikadesigns@gmail.com
+						madhulika@thelovingcore.com
 					</a>
 				</li>
 				<li class="grid-2">
@@ -526,40 +526,14 @@
 			<!-- Social Links -->
 			<ul class="social-links grid-full">
 				<li><a href="https://ca.linkedin.com/in/madhulikasaxena" target="_blank"><img src="images/icons/linkedin-large.png" alt="linkedin" width="36" height="36"></a></li>
-				<li><a href="https://dribbble.com/madhulika" target="_blank"><img src="images/icons/dribbble-large.png" alt="dribbble" width="36" height="36"></a></li>
+				<li><a href="https://dribbble.com/thelovingcore" target="_blank"><img src="images/icons/dribbble-large.png" alt="dribbble" width="36" height="36"></a></li>
 				<li><a href="https://twitter.com/linesandcolour" target="_blank"><img src="images/icons/twitter-large.png" alt="twitter" width="36" height="36"></a></li>
+				<li><a href="https://www.behance.net/madhulikadesigns" target="_blank"><img src="images/icons/behance-small.png" alt="behance" width="36" height="36"></a></li>
 
-				<!-- Dribble
-				<li><a href="https://dribbble.com/madhulika" target="_blank"><img src="images/icons/dribbble-large.png" alt="dribbble" width="36" height="36"></a></li>
-				-->
-
-				<!-- LinkedIn
-				<li><a href="https://ca.linkedin.com/in/madhulikasaxena" target="_blank"><img src="images/icons/linkedin-large.png" alt="linkedin" width="36" height="36"></a></li>
-				-->
-
-				<!-- YouTube
-				<li><a href="https://youtube.com" target="_blank"><img src="images/icons/youtube-large.png" alt="youtube" width="36" height="36"></a></li>
-				-->
-
-				<!-- Vimeo
-				<li><a href="https://vimeo.com" target="_blank"><img src="images/icons/vimeo-large.png" alt="vimeo" width="36" height="36"></a></li>
-				-->
-
-				<!-- Flickr
-				<li><a href="https://flickr.com" target="_blank"><img src="images/icons/flickr-large.png" alt="flickr" width="36" height="36"></a></li>
-				-->
-
-				<!-- RSS
-				<li><a href="https://rss.com" target="_blank"><img src="images/icons/rss-large.png" alt="rss" width="36" height="36"></a></li>
-				-->
-
-				<!-- Google Plus
-				<li><a href="https://google.com" target="_blank"><img src="images/icons/google-large.png" alt="google" width="36" height="36"></a></li>
-				-->
 			</ul>
 
 			<!-- Copyright Info -->
-			<div class="copyright grid-full"><h6>© 2018 Madhulika Saxena. All rights reserved.</h6></div>
+			<div class="copyright grid-full"><h6>© 2019 Madhulika Saxena</h6></div>
 
 		</div>
 	</footer>
