Icon and form update

--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
 
 			<!-- Social Links -->
 			<ul class="social-links grid-full">
-				<li><a href="https://ca.linkedin.com/in/madhulikasaxena" target="_blank"><img src="images/icons/linkedin-large.png" alt="linkedin" width="36" height="36"></a></li>
-				<li><a href="https://dribbble.com/thelovingcore" target="_blank"><img src="images/icons/dribbble-large.png" alt="dribbble" width="36" height="36"></a></li>
-				<li><a href="https://twitter.com/linesandcolour" target="_blank"><img src="images/icons/twitter-large.png" alt="twitter" width="36" height="36"></a></li>
-				<li><a href="https://www.behance.net/madhulikadesigns" target="_blank"><img src="images/icons/behance-small.png" alt="behance" width="36" height="36"></a></li>
+				<li><a href="https://ca.linkedin.com/in/madhulikasaxena" target="_blank"><img src="images/icons/linkedin-large@2x.png" alt="linkedin" width="36" height="36"></a></li>
+				<li><a href="https://twitter.com/linesandcolour" target="_blank"><img src="images/icons/twitter-large@2x.png" alt="twitter" width="36" height="36"></a></li>
+				<li><a href="https://dribbble.com/thelovingcore" target="_blank"><img src="images/icons/dribbble-large@2x.png" alt="dribbble" width="36" height="36"></a></li>
+				<li><a href="https://www.behance.net/madhulikadesigns" target="_blank"><img src="images/icons/behance-small@2x.png" alt="behance" width="36" height="36"></a></li>
 
 			</ul>
 
