--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 
 			<!-- Subscribe -->
 			<div class="subscribe grid-full">
-				<p>Looking for some design work? Drop me a line and I’ll be sure to get back to you.</p>
+				<p>Looking for some design work? Drop me a line at madhulika@thelovingcore.com and I’ll be sure to get back to you.</p>
 			</div>
 		</div>
 	</section>
@@ -468,6 +468,7 @@
 		<div class="content dark container">
 
 			<!-- Contact Links -->
+			<!---
 			<ul class="contact animated hatch clearfix">
 				<li class="grid-2">
 					<img src="images/icons/telephone.png" alt="telephone" width="20" height="20">
@@ -489,8 +490,9 @@
 				</li>
 			</ul>
 		</div>
+		--->
 
-		<!-- Contact Form -->
+		<!-- Contact Form
 		<div id="contact-form" class="dark clearfix">
 			<div class="container">
 				<div class="contact-heading grid-full">
@@ -520,8 +522,9 @@
 				<div id="alert" class="grid-full"></div>
 			</form>
 		</div>
+		-->
 
-		<div class="container">
+		<div class="content dark container">
 
 			<!-- Social Links -->
 			<ul class="social-links grid-full">
