Updated to staff

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
 		<div class="title grid-full">
 			<h2>Madhulika Saxena</h2>
 			<span class="border"></span>
-			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently a Senior Product Designer at <a href="https://www.shopify.com" target="_blank">Shopify</a>. Based in Toronto, Canada.</p>
+			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently a Staff Product Designer at
+				<a href="https://www.shopify.com" target="_blank">Shopify
+				</a>.
+				Based in Toronto, Canada.
+			</p>
 		</div>
 
 		<!-- Image -->
