Updated images and words

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 				<li><a href="#section2">About</a></li>
 				<li><a href="#section3">Design Focus</a></li>
 				<li><a href="#section4">Work</a></li>
-				<li><a href="https://www.thelovingcore.com" target="_blank">The Loving Core Studio</a></li>
 				<li><a href="#footer">Contact</a></li>
 			</ul>
 		</div>
@@ -95,7 +94,7 @@
 			<!-- Headings -->
 		<div class="title grid-full">
 				<h1>Madhulika Saxena</h1>
-				<h3>Designer // Illustrator</h3>
+				<h3>Product designer</h3>
 		</div>
 
 		 	<!-- Buttons -->
