Fixed project links

--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@
 
 		<!-- Text -->
 		<div class="title grid-full">
-			<h2>Madhulika Saxena</h2>
-			<span class="border"></span>
-			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently a Staff Product Designer at
-				<a href="https://www.shopify.com" target="_blank">Shopify
+			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently working at <a href="https://www.shopify.com" target="_blank">Shopify as a Staff Product Designer.
 				</a>.
 				Based in Toronto, Canada.
 			</p>
@@ -264,7 +261,7 @@
 			<!-- Filters -->
 			<ul class="filtering grid-full">
 				<li class="filter" data-filter="all">all</li>
-			    <li class="filter" data-filter="category_ux">UX/UI</li>
+			    <li class="filter" data-filter="category_ux">UX</li>
 			    <li class="filter" data-filter="category_branding">Branding</li>
 				  <li class="filter" data-filter="category_data">Data Visualization</li>
 			    <li class="filter" data-filter="category_print">Print</li>
@@ -313,7 +310,7 @@
 				</a>
 			</li>
 			<li class="project mix category_ux mix_all">
-				<a href="#!projects/shop.html">
+				<a href="#1-projects/shop.html">
 					<img src="images/thumbnails/thumb-shop.jpg" alt="thumbnail">
 					<div class="projectinfo">
 						<div class="meta">
@@ -452,7 +449,7 @@
 
 			<!-- Subscribe -->
 			<div class="subscribe grid-full">
-				<p>Looking for some design work? Drop me a line at madhulikadesigns@gmail.com and I’ll be sure to get back to you.</p>
+				<p>Looking for some design work? Drop me a line at madhulikadesigns@gmail.com.</p>
 			</div>
 		</div>
 	</section>
