--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 		<!-- Thumbnails -->
 		<ul id="portfolio-grid" class="projectlist clearfix">
 			<li class="project mix category_ux mix_all">
-				<a href="#!projects/smart-retail.html">
+				<a href="#projects/smart-retail.html">
 					<img src="images/thumbnails/thumb-smart-retail.jpg" alt="thumbnail">
 					<div class="projectinfo">
 						<div class="meta">
