--- a/projects/tangled.html
+++ b/projects/tangled.html
@@ -96,34 +96,34 @@
 			<!-- Slider -->
 			<ul class="slider clearfix">
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/1@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/1@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/2@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/2@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/3@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/3@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/4@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/4@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/5@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/5@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/6@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/6@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/7@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/7@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/8@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/8@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/9@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/9@2x.jpg" alt="">
 				</li>
 				<li>
-					<img src="http://madhulikasaxena.com/projects/Tangled/10@2x.jpg" alt="">
+					<img src="http://madhulikasaxena.com/projects/UX/Tangled/10@2x.jpg" alt="">
 				</li>
 			</ul>
 
