--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
 
 		<!-- Text -->
 		<div class="title grid-full">
-			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently working at <a href="https://www.shopify.com" target="_blank">Shopify as a Staff Product Designer.
-				</a>.
+			<p class="sub-heading">With a love for art and design, I blend my two worlds to inspire my creative work. Currently working at <a href="https://www.shopify.com" target="_blank">Shopify </a> as a Staff Product Designer.
 				Based in Toronto, Canada.
 			</p>
 		</div>
