--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					<div class="icon ux"></div>
 
 					<!-- Title -->
-					<h4>UX & UI Design</h4>
+					<h4>UX Design</h4>
 
 				</li>
 
@@ -309,7 +309,7 @@
 				</a>
 			</li>
 			<li class="project mix category_ux mix_all">
-				<a href="#projects/shop.html">
+				<a href="#!projects/shop.html">
 					<img src="images/thumbnails/thumb-shop.jpg" alt="thumbnail">
 					<div class="projectinfo">
 						<div class="meta">
